@@ -35,6 +35,7 @@
   <script language="javascript" src="include/prototype.js" type="text/javascript"></script>
   <script language="javascript" src="include/scriptaculous.js" type="text/javascript"></script>
   <script language="javascript" src="include/effects.js" type="text/javascript"></script>
+  <script language="javascript" src="include/dragdrop.js" type="text/javascript"></script>
   <script language="javascript" src="include/controls.js" type="text/javascript"></script>
   <script language="javascript" src="include/pulldown.js" type="text/javascript"></script>
   <script language="javascript" src="include/datepicker.js" type="text/javascript"></script>
