@@ -3,12 +3,18 @@ GOsa2 changelog
 
 * gosa 2.6.7
   - Added more information to DHCP service dialog (thanks to Mathieu)
-  - Fixed generation of kerberos host keys when DNS is enabled
   - Added more checks for DNS zone records
+  - Added IMAP folder autocreation
+  - Fixed generation of kerberos host keys when DNS is enabled
   - Fixed template error message when no sshkey plugin is enabled
+  - Fixed problem where arrays got shortened by one in copy and paste
+  - Fixed avascript for IE
+  - Fixed issues with templates and password methods that got introduced
+    in 2.6.6 user list migration
+  - Speed up OPSI operations
   - Speed up group and user removal by large factors
-  - Fix Problem where arrays got shortened by one in copy and paste
-  - Unified complete logging with rSyslog plugin and service
+  - Unified logging with rSyslog plugin and service
+  - Converted to new configurable lists view
 
 * gosa 2.6.6
   - Added ssh public key management
